# FUDGE-Suite

./: .gitignore  ARCHITECTURE.md  README.md  THREATS.md  badfu_ablation.py  badfu_probe.py  cached_weights.npz  durability_probe.py  oscillation_sweep.py  pyproject.toml  run_14989709.out  submit_aggregate.sh  submit_benchmark.sh  submit_sweep.sh  submit_test.sh
results/: badfu_abl_a1_p0.5_c0.4.json  badfu_abl_a2_p0.5_c0.4.json  badfu_abl_a4_p0.5_c0.4.json  badfu_p0.5_c0.2.json  badfu_p0.5_c0.3.json  badfu_p0.5_c0.4.json  durability_badnets.json  durability_neurotoxin.json  metrics_badfu.json  metrics_badnets.json  metrics_badnets_federaser.json  metrics_dba_detected.json  metrics_dba_detected_federaser.json  metrics_dba_partial.json  metrics_dba_partial_federaser.json  metrics_edgecase.json  metrics_fedmua.json  metrics_neurotoxin.json  metrics_neurotoxin_federaser.json
src/: benchmark.py  client.py  config.py  main.py  registry.py  runner.py  training.py
src/audit/: benchmarker.py  scorers.py
src/datasets/: dataset.py  dirichlet.py  partitions.json  reference_model.py
src/models/: model.py
src/strategies/: strategy.py
src/threat_models/: badfu_attack.py  badnets_attack.py  base.py  dba_attack.py  edgecase_attack.py  fedmua_attack.py  fudge.py  neurotoxin_attack.py
src/unlearning/: base.py  federaser.py  pga.py  rfs.py
