[project]
name = "fudge-suite"
version = "0.1.0"
description = "Standardized benchmark for auditing horizontal federated unlearning security regressions."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "flwr[simulation]>=1.8.0",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "numpy>=1.24.0",
]